# market_data_streamer

./: .gitignore  CMakeLists.txt  README.md  binance_ws_client.py  market_data.grpc.pb.cc  market_data.grpc.pb.h  market_data.pb.cc  market_data_pb2.py  market_data_pb2_grpc.py
proto/: market_data.pb.h  market_data.proto
server/: server.cpp
